--- a/src/app/http-demo.component.html
+++ b/src/app/http-demo.component.html
@@ -1,3 +1,9 @@
 <h1>
   {{title}}
 </h1>
+<nav>	
+<a [routerLink]="['/']">Home</a>
+<a [routerLink]="['/followers']">Followers</a>
+</nav>
+
+<router-outlet></router-outlet>
